# enghub-rust-sample-webapp

./: README.md  docker-compose.yml  memo.md
app/: Cargo.toml
app/src/: main.rs
common/error/: Cargo.toml
common/error/src/: lib.rs
context/app_context/: Cargo.toml
context/app_context/src/: lib.rs
context/mock_context/: Cargo.toml
context/mock_context/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/model/: user.rs
domain/src/repository/: user_repository.rs
infra/db_schema/: Cargo.toml
infra/db_schema/migrations/2023-08-20-111020_create_users/: up.sql
infra/db_schema/src/: schema.rs
infra/grpc_handler/: Cargo.toml
infra/grpc_handler/src/: convert.rs  lib.rs
infra/repository_impl/: Cargo.toml
infra/repository_impl/src/: lib.rs
proto/user/v1/: user.proto
usecase/: Cargo.toml
usecase/src/: create_user.rs  get_users_by_ids.rs  lib.rs
