[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
derive-getters = "0.3.0"
mockall = "0.11.4"
uuid = { version = "1.4.1", features = ["v4"] }

error = { path = "../common/error"}
