[package]
name = "grpc_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
app_context = { version = "0.1.0", path = "../../context/app_context" }
derive-getters = "0.3.0"
derive-new = "0.5.9"
domain = { version = "0.1.0", path = "../../domain" }
error = { version = "0.1.0", path = "../../common/error" }
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
usecase = { version = "0.1.0", path = "../../usecase" }

[build-dependencies]
tonic-build = "0.9.2"
